--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,6 @@
 	
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
     <title>Agence la panthère - contact et formulaire</title>
 	<meta name="description" content="Si vous souhaitez contacter l'agence la panthère, vous trouverez tout ce qu'il faut sur cette page" />
 
@@ -40,7 +37,7 @@
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<div class="navbar-collapse navbar-1 special-dropdown-nav collapse in">
+			<div class="navbar-collapse navbar-1 special-dropdown-nav collapse">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="index.html">Accueil</a>
