Remise en place JS

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,9 @@
 	
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/gmaps.js"></script>
     <title>Agence la panthère - contact et formulaire</title>
 	<meta name="description" content="Si vous souhaitez contacter l'agence la panthère, vous trouverez tout ce qu'il faut sur cette page" />
 
