--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/gmaps.js"></script>
 	<script type="application/ld+json">
 		{
 		  "@context": "https://schema.org",
