--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,6 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -35,7 +33,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="lien" class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" class="banniere" alt="atlanta web design logo" height="40" /></a>
+				<a class="navbar-brand lien" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" class="banniere" alt="atlanta web design logo" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
