--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
 	<div class="container bloc-lg">
 		<div class="row_formulaire">
 			<div class="col-sm-6">
-				<form id="form_1" success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" data-success-msg="Your message has been sent." data-fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label>
 							Nom
