--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
     <title>Agence la panthère - contact et formulaire</title>
-	<meta name="description" content="Si vous souhaitez contacter l'agence la panthère, vous trouverez tout ce qu'il faut sur cette page" />
+	<meta name="description" content="Si vous souhaitez contacter l'agence la panthère, vous trouverez tout ce qu'il faut sur cette page">
 
     
 <!-- Analytics -->
@@ -33,7 +33,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand lien" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" class="banniere" alt="atlanta web design logo" height="40" /></a>
+				<a class="navbar-brand lien" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" class="banniere" alt="atlanta web design logo" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -73,6 +73,7 @@
 
 <!-- bloc-7 -->
 <section class="bloc bgc-white l-bloc" id="bloc-7">
+	<h2>Formulaire d'envoi</h2>
 	<div class="container bloc-lg">
 		<div class="row_formulaire">
 			<div class="col-sm-6">
@@ -81,19 +82,19 @@
 						<label>
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" required>
 					</div>
 					<div class="form-group">
 						<label>
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" required>
 					</div>
 					<div class="form-group">
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" required id="input_504" />
+						<input class="form-control" required id="input_504">
 					</div>
 					<div class="form-group">
 						<label>
