--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 
 <!-- bloc-7 -->
 <section class="bloc bgc-white l-bloc" id="bloc-7">
-	<h2>Formulaire d'envoi</h2>
+	<h2 class="titre-formulaire">Formulaire d'envoi</h2>
 	<div class="container bloc-lg">
 		<div class="row_formulaire">
 			<div class="col-sm-6">
